--- a/templates/proj3.html
+++ b/templates/proj3.html
@@ -6,6 +6,7 @@
     <title>Pokemon Battle</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='proj3.css') }}">
+    <script src="{{ url_for('static', filename='proj3.js') }}" async></script>
 </head>
 <body>
     <div id="title">
@@ -13,6 +14,9 @@
         <img id="pokemonTitle">
         <img id="titleSprite2">
     </div>
-    <script src="{{ url_for('static', filename='proj3.js') }}"></script>
+    <br><br><br>
+    <a href="{{ url_for('menu') }}">
+        <button type="button">Play Now</button>
+    </a>
 </body>
 </html>
