--- a/static/proj3.css
+++ b/static/proj3.css
@@ -66,7 +66,6 @@ body::before {
 }
 
 #pokemonTitle {
-    /* Style the title image */
     max-width: 450px;
     height: auto;
     image-rendering: pixelated; /* keeps pixel art crisp */
@@ -77,7 +76,7 @@ body::before {
 #battleText {
     font-family: 'Press Start 2P', monospace;
     font-size: 1.2rem;
-    color: #fff;
+    color: #dcd50d;
     text-shadow: 
         2px 2px 0px #000,
         0 0 10px rgba(255,215,0,0.5);
