--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokemon Battle - Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='menu.css') }}">
 </head>
 <body>
-    <h1>This is the play menu</h1>
-    <br>
-    <a href="{{ url_for('battle') }}">
-        <button type="button" class="battleButton">Battle!</button>
-    </a>
-    <p></p>
-    <a href="{{ url_for('teambuilder') }}">
-        <button type="button">Team Builder</button>
-    </a>
-    <p></p>
-    <a href="{{ url_for('viewcollection') }}">
-        <button type="button">View Collection</button>
-    </a>
+    <div id="menuContainer">
+        <div id="menuTitle">
+            <h1>Choose Your Adventure</h1>
+        </div>
+        
+        <div id="menuOptions">
+            <a href="{{ url_for('battle') }}">
+                <button id="battleButton" type="button">Battle!</button>
+            </a>
+            
+            <a href="{{ url_for('teambuilder') }}">
+                <button id="teamButton" type="button">Team Builder</button>
+            </a>
+            
+            <a href="{{ url_for('viewcollection') }}">
+                <button id="collectionButton" type="button">View Collection</button>
+            </a>
+            
+            <a href="{{ url_for('home') }}">
+                <button id="backButton" type="button">← Back to Home</button>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
