Added login and register buttons and pages. Added starting logic in proj3.py for login and register database handling.

--- a/static/proj3.css
+++ b/static/proj3.css
@@ -1,3 +1,9 @@
+.account{
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
+
 body {
     background-color: #ffffff;
     font-family: Arial, sans-serif;
