Update CSS and HTML for enhanced menu and project styling with new background gradients, star field animations, and button designs

--- a/pokemonGame/templates/proj3.html
+++ b/pokemonGame/templates/proj3.html
@@ -11,10 +11,10 @@
 <body>
     <div class="account">
         <a href="{{ url_for('login') }}">
-            <button type="button">Login</button>
+            <button id="loginButton" type="button">Login</button>
         </a>
         <a href="{{ url_for('register') }}">
-            <button type="button">Register</button>
+            <button id="registerButton" type="button">Register</button>
         </a>
     </div>
 
