--- a/pokemonGame/templates/auth/register.html
+++ b/pokemonGame/templates/auth/register.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
 </head>
 <body>
@@ -16,11 +19,11 @@
     <form class="loginForm" method="post">
         <h1>Register</h1>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required="required" value="{{ username|default('') }}">
+        <input type="text" id="username" name="username" required="required" value="{{ username|default('') }}" placeholder="Choose username">
         <label for="password">Password:</label>
-        <input type="text" id="password" name="password" required="required">
+        <input type="password" id="password" name="password" required="required" placeholder="Create password">
         <label for="confirmPassword">Confirm Password:</label>
-        <input type="text" id="confirmPassword" name="confirmPassword" required="required">
+        <input type="password" id="confirmPassword" name="confirmPassword" required="required" placeholder="Confirm password">
         <input type="submit" id="submit" value="Register">
     </form>
 </body>
